@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.serialycz.cz"
        name="serialycz.cz"
-       version="1.1.6"
+       version="1.1.7"
        provider-name="Libor Zoubek">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-    <import addon="script.module.stream.resolver" version="1.1.7" />
+    <import addon="script.module.stream.resolver" version="1.2.7" />
   </requires>
   <extension point="xbmc.python.pluginsource"
              provides="video"
@@ -18,6 +18,5 @@
     <description lang="en">Watch online series from serialycz.cz</description>
     <description lang="cs">Sledujte online seriály ze servru serialycz.cz</description>
     <platform>all</platform>
-    <broken>Server serialycz.cz je nedostupný</broken>
   </extension>
 </addon>
